--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 		*{
-			font-family: segoe ui;
+			font-family: news cycle;
 		}
 		body{
 			background: #000000;
@@ -31,7 +31,6 @@
 			width: 100%;
 			height: auto;
 			z-index: 0;
-			display: inline-flex;
 			transition: 0.6s;
 			animation: incoming 1s;
 		}
@@ -62,7 +61,7 @@
 			padding: 3px;
 			background: rgba(255,255,255,0.3);
 			text-align: center;
-			font-size: 12;
+			font-size: 12px;
 		}
 		.attachment{
 			height: 20px;
